--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,9 @@
     "bootstrap": "^3.3.7",
     "angular": "^1.6.3",
     "angular-route": "^1.6.3",
-    "angularfire": "^2.3.0"
+    "angularfire": "^2.3.0",
+    "ng-img-crop": "ngImgCrop#^0.3.2",
+    "angular-file-upload": "^2.5.0",
+    "ng-file-upload": "^12.2.13"
   }
 }
