--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angularfire": "^2.3.0",
     "ng-img-crop": "ngImgCrop#^0.3.2",
     "angular-file-upload": "^2.5.0",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "angular-bootstrap": "^2.5.0"
   }
 }
